v1 스터디 그룹 추천 시스템을 구현하고, 관련된 JPA fetch join 및 지연 로딩 문제를 해결했습니다.
- **스터디 그룹 추천 (v1: 점수 기반) 기능 구현:**
  - 사용자 프로필(관심 태그, 학습 스타일)과 스터디 그룹 정보(태그, 학습 스타일)를 기반으로 매칭 점수 계산 로직 구현.
  - `GET /api/study-groups/recommendations` API 엔드포인트 추가.
  - `RecommendedStudyGroupDto`를 사용하여 추천 결과 반환.

- **JPA `MultipleBagFetchException` 해결:**
  - `List` 타입의 컬렉션을 여러 개 `fetch join` 할 때 발생하는 `MultipleBagFetchException` 오류 해결.
  - `User` 및 `StudyGroup` 엔티티 내 `@OneToMany` 연관관계 필드 타입을 `List`에서 `Set`으로 변경하여 데이터 일관성 및 `fetch join` 허용.

- **지연 로딩 (Lazy Loading) 문제 해결 및 N+1 쿼리 방지:**
  - `UserRepository`에 `findByEmailWithDetails` 쿼리 추가: `User` 조회 시 `studyMembers` 및 `userTags`를 `FETCH JOIN`으로 한 번에 로딩하여 지연 로딩 문제 방지 및 성능 최적화.
  - `StudyGroupRepository`에 `findAllWithTags` 쿼리 추가: 모든 `StudyGroup` 조회 시 `studyGroupTags`를 `FETCH JOIN`으로 로딩하여 N+1 문제 방지.

- **매칭 점수 계산 로직 개선:**
  - `calculateMatchScore` 메소드 내 태그 교집합 계산 시, 원본 `Set`을 변경하지 않고 새로운 `Set`을 생성하여 로직의 안정성 확보.

- **`StudyGroupTag` 영속성 전이(Cascade) 설정:**
  - `StudyGroup` 엔티티의 `studyGroupTags` 필드에 `cascade = CascadeType.ALL` 및 `orphanRemoval = true` 옵션을 추가하여 `StudyGroup` 저장/삭제 시 연관된 `StudyGroupTag`도 함께 관리되도록 설정.

- **필수 엔티티 필드 누락 수정:**
  - `User` 엔티티의 `job` 및 `goal` 필드를 DTO 및 엔티티에 반영.